# dodo-ros-control

./: .gitignore  README.md  docker-compose.yml
assets/: README.md
docker/: Dockerfile  Dockerfile.gui  README.md  entrypoint.sh  isaac_ros.Dockerfile  isaac_sim.Dockerfile
isaac_sim/: README.md
isaac_sim/controllers/: dodo_rl_controller.py
isaac_sim/launch/: run_dodo_rl.py
models/: README.md
mujoco/: README.md
mujoco/models/: policy.onnx.data
mujoco/scripts/: create_dummy_onnx.py  test_onnx_inference.py
mujoco/sim/: run_urdf.py
ros2_ws/: README.md
ros2_ws/src/dodo_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/dodo_controller/dodo_controller/: dodo_controller_node.py
ros2_ws/src/dodo_mujoco_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/dodo_mujoco_bridge/dodo_mujoco_bridge/: hello_node.py
ros2_ws/src/dodo_ros_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/dodo_ros_control/dodo_ros_control/: README.md  dummy_node.py  inference_node.py
ros2_ws/src/dodo_ros_control/dodo_ros_control/can/: can_interface.py  can_mock.py
scripts/: README.md  dodo_run.sh  run_isaac_ros.sh  run_isaac_sim.sh
