<?xml version="1.0"?>
<package format="3">
  <name>dodo_ros_control</name>
  <version>0.0.0</version>
  <description>ROS 2 runtime for sim2sim and sim2real control of the Dodo robot using trained RL policies.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>